--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2643,6 +2643,48 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "8083ef6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['pdb', 'Hchain', 'Lchain', 'Achain', 'Hseq', 'Lseq', 'Aseq', 'L1', 'L2', 'L3', 'H1', 'H2', 'H3', 'Hpos', 'Lpos', 'Apos'])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d5fffd7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(392, 392)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data[0][\"Aseq\"][0]), len(data[0][\"Apos\"][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "20d9c0d7",
    "metadata": {},
    "outputs": [
@@ -2683,6 +2725,27 @@
    ],
    "source": [
     "data[0][\"Hpos\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "83af5e80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 3)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0][\"Hpos\"][0].shape"
    ]
   },
   {
@@ -2732,11 +2795,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "13d202a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(392, 1)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data[0][\"Aseq\"][0]), len(data[0][\"Apos\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "f1bce680",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 37.846, -27.322, 244.186],\n",
+       "       [ 36.957, -28.308, 243.585],\n",
+       "       [ 37.441, -28.704, 242.194],\n",
+       "       [ 36.769, -29.451, 241.482]], dtype=float32)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0][\"Lpos\"][0]"
+   ]
   },
   {
    "cell_type": "code",
@@ -2763,7 +2863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0 (default, Nov  6 2019, 16:00:02) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.0"
   },
   "vscode": {
    "interpreter": {
