--- a/3_seqs_structs.ipynb
+++ b/3_seqs_structs.ipynb
@@ -3857,7 +3857,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ptdev",
    "language": "python",
    "name": "python3"
   },
@@ -3871,7 +3871,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.0 (default, Jun 28 2018, 08:04:48) [MSC v.1912 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1575e3d8839f9ca4e827c21a5dc2f0f6d4f607876cdfd1e57806b694e243d3f5"
+   }
   }
  },
  "nbformat": 4,
