chain matching issue

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "944cb70e",
    "metadata": {},
    "outputs": [],
@@ -17,19 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "8f90688c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random seed set as 42\n",
-      "Random seed set as 42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import pickle\n",
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "1eeadbcb",
    "metadata": {},
    "outputs": [],
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "0187b3bc",
    "metadata": {
     "scrolled": true
@@ -95,7 +86,7 @@
        "(torch.Size([32, 1]), torch.Size([32, 3]))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5331,7 +5322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "367c21f1",
    "metadata": {},
    "outputs": [
@@ -5341,7 +5332,7 @@
        "5374"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5353,7 +5344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "fc5f366a",
    "metadata": {},
    "outputs": [
@@ -5363,7 +5354,7 @@
        "dict_keys(['pdb', 'Hchain', 'Lchain', 'Achain', 'Hseq', 'Lseq', 'Aseq', 'L1', 'L2', 'L3', 'H1', 'H2', 'H3', 'Hpos', 'Lpos', 'Apos'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5374,7 +5365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "6279c461",
    "metadata": {},
    "outputs": [
@@ -7261,7 +7252,13 @@
       "6xq4 has occurred 2 times\n",
       "5kvf has occurred 1 times\n",
       "7uko has occurred 2 times\n",
-      "7ryc has occurred 1 times\n",
+      "7ryc has occurred 1 times\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "6mph has occurred 9 times\n",
       "7v05 has occurred 14 times\n",
       "7qu2 has occurred 1 times\n",
@@ -8124,13 +8121,7 @@
       "4ogy has occurred 2 times\n",
       "7ew3 has occurred 1 times\n",
       "6m47 has occurred 1 times\n",
-      "3mug has occurred 2 times\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "3mug has occurred 2 times\n",
       "7rlz has occurred 2 times\n",
       "2ipu has occurred 2 times\n",
       "5d1x has occurred 2 times\n",
@@ -9074,7 +9065,13 @@
       "4hs6 has occurred 2 times\n",
       "6d0u has occurred 4 times\n",
       "5zia has occurred 6 times\n",
-      "6bft has occurred 2 times\n",
+      "6bft has occurred 2 times\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "4kjp has occurred 2 times\n",
       "7lbg has occurred 2 times\n",
       "4d9q has occurred 2 times\n",
@@ -10770,7 +10767,7 @@
        "1660"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10794,7 +10791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "e0e88f7e",
    "metadata": {},
    "outputs": [
@@ -10951,7 +10948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113277d2",
+   "id": "aa194ee6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -10959,7 +10956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddf792df",
+   "id": "4f33038a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -10967,15 +10964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c13372c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08c823cf",
+   "id": "6b033cd2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -10990,7 +10979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "94e5c5de",
    "metadata": {},
    "outputs": [
@@ -11011,7 +11000,7 @@
        "'3333333000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11066,8 +11055,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "4b98c357",
+   "execution_count": 20,
+   "id": "ebc71b05",
    "metadata": {},
    "outputs": [
     {
@@ -11076,7 +11065,7 @@
        "('M', 'M')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
