solved chain matching problem

--- a/2_data_preprocessing.ipynb
+++ b/2_data_preprocessing.ipynb
@@ -12345,7 +12345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5239b75a",
    "metadata": {},
    "outputs": [
@@ -12353,8 +12353,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|▉                                                                               | 67/5403 [00:16<24:31,  3.63it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 5403/5403 [27:56<00:00,  3.22it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5403"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -12712,7 +12722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "4a5ab87b",
    "metadata": {},
    "outputs": [],
@@ -12734,7 +12744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "864d0253",
    "metadata": {},
    "outputs": [],
@@ -12746,10 +12756,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9f79d065",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(list, 5403)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(cdr_seqs), len(cdr_seqs)"
    ]
