--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "944cb70e",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "8f90688c",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "1eeadbcb",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "0187b3bc",
    "metadata": {
     "scrolled": true
@@ -86,7 +86,7 @@
        "(torch.Size([32, 1]), torch.Size([32, 3]))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5322,7 +5322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "367c21f1",
    "metadata": {},
    "outputs": [
@@ -5332,7 +5332,7 @@
        "5374"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5344,7 +5344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "fc5f366a",
    "metadata": {},
    "outputs": [
@@ -5354,7 +5354,7 @@
        "dict_keys(['pdb', 'Hchain', 'Lchain', 'Achain', 'Hseq', 'Lseq', 'Aseq', 'L1', 'L2', 'L3', 'H1', 'H2', 'H3', 'Hpos', 'Lpos', 'Apos'])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5365,7 +5365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "6279c461",
    "metadata": {},
    "outputs": [
@@ -7210,7 +7210,13 @@
       "2exw has occurred 2 times\n",
       "7ki6 has occurred 3 times\n",
       "4ubd has occurred 6 times\n",
-      "6vbo has occurred 1 times\n",
+      "6vbo has occurred 1 times\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "6ad8 has occurred 2 times\n",
       "3dsf has occurred 1 times\n",
       "5usi has occurred 2 times\n",
@@ -7252,13 +7258,7 @@
       "6xq4 has occurred 2 times\n",
       "5kvf has occurred 1 times\n",
       "7uko has occurred 2 times\n",
-      "7ryc has occurred 1 times\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "7ryc has occurred 1 times\n",
       "6mph has occurred 9 times\n",
       "7v05 has occurred 14 times\n",
       "7qu2 has occurred 1 times\n",
@@ -9051,7 +9051,13 @@
       "4rrp has occurred 6 times\n",
       "1tzh has occurred 2 times\n",
       "7rsn has occurred 3 times\n",
-      "5j13 has occurred 1 times\n",
+      "5j13 has occurred 1 times\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "5kov has occurred 8 times\n",
       "5n7w has occurred 2 times\n",
       "5a2j has occurred 1 times\n",
@@ -9065,13 +9071,7 @@
       "4hs6 has occurred 2 times\n",
       "6d0u has occurred 4 times\n",
       "5zia has occurred 6 times\n",
-      "6bft has occurred 2 times\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "6bft has occurred 2 times\n",
       "4kjp has occurred 2 times\n",
       "7lbg has occurred 2 times\n",
       "4d9q has occurred 2 times\n",
@@ -10674,7 +10674,13 @@
       "7rm3 has occurred 2 times\n",
       "5myx has occurred 2 times\n",
       "5d71 has occurred 1 times\n",
-      "4xvs has occurred 1 times\n",
+      "4xvs has occurred 1 times\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "6wfz has occurred 2 times\n",
       "1svz has occurred 2 times\n",
       "6mek has occurred 4 times\n",
@@ -10767,7 +10773,7 @@
        "1660"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10791,46 +10797,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "e0e88f7e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lcdr disalignment: 7v05 at position 183\n",
       "Hcdr disalignment: 3csy at position 229\n",
-      "Lcdr disalignment: 7cn2 at position 285\n",
       "Hcdr disalignment: 2znx at position 357\n",
       "Lcdr disalignment: 2znx at position 357\n",
-      "Lcdr disalignment: 6mph at position 475\n",
       "Hcdr disalignment: 7t9b at position 484\n",
       "Hcdr disalignment: 4r4n at position 598\n",
-      "Lcdr disalignment: 4tnv at position 603\n",
       "Hcdr disalignment: 2znx at position 788\n",
       "Lcdr disalignment: 2znx at position 788\n",
-      "Hcdr disalignment: 6vmk at position 798\n",
-      "Lcdr disalignment: 6vmk at position 798\n",
-      "Lcdr disalignment: 7cn2 at position 918\n",
       "Hcdr disalignment: 3u4e at position 962\n",
       "Hcdr disalignment: 7t74 at position 1020\n",
-      "Lcdr disalignment: 7cn2 at position 1066\n",
       "Hcdr disalignment: 6t9e at position 1069\n",
       "Lcdr disalignment: 6t9e at position 1069\n",
-      "Lcdr disalignment: 7v05 at position 1123\n",
-      "Lcdr disalignment: 7v05 at position 1168\n",
-      "Lcdr disalignment: 7v05 at position 1177\n",
       "Hcdr disalignment: 7lf8 at position 1179\n",
-      "Lcdr disalignment: 7v05 at position 1194\n",
       "Hcdr disalignment: 3csy at position 1231\n",
       "Hcdr disalignment: 6ss6 at position 1364\n",
-      "Hcdr disalignment: 7ew5 at position 1441\n",
-      "Lcdr disalignment: 7ew5 at position 1441\n",
       "Hcdr disalignment: 4r4n at position 1448\n",
       "Hcdr disalignment: 6u0n at position 1556\n",
       "Hcdr disalignment: 4r4n at position 1560\n",
-      "Lcdr disalignment: 7v05 at position 1584\n",
       "Hcdr disalignment: 4dqo at position 1609\n",
       "Hcdr disalignment: 7t9a at position 1630\n",
       "Hcdr disalignment: 2qad at position 1660\n",
@@ -10838,99 +10831,53 @@
       "Lcdr disalignment: 6yax at position 1692\n",
       "Hcdr disalignment: 4r4n at position 1832\n",
       "Hcdr disalignment: 6u0l at position 1867\n",
-      "Lcdr disalignment: 7v05 at position 1881\n",
-      "Lcdr disalignment: 7v05 at position 1922\n",
-      "Hcdr disalignment: 6vmk at position 1924\n",
-      "Lcdr disalignment: 6vmk at position 1924\n",
       "Hcdr disalignment: 6ss6 at position 1948\n",
       "Hcdr disalignment: 6w4m at position 1984\n",
-      "Hcdr disalignment: 6ot1 at position 2031\n",
-      "Lcdr disalignment: 6ot1 at position 2031\n",
       "Hcdr disalignment: 6t9d at position 2097\n",
       "Lcdr disalignment: 6t9d at position 2097\n",
-      "Lcdr disalignment: 7v05 at position 2137\n",
       "Hcdr disalignment: 7d3r at position 2175\n",
-      "Lcdr disalignment: 4tnw at position 2214\n",
-      "Lcdr disalignment: 4tnw at position 2237\n",
       "Hcdr disalignment: 4r4n at position 2240\n",
       "Hcdr disalignment: 5uwe at position 2270\n",
-      "Hcdr disalignment: 6vmk at position 2308\n",
-      "Lcdr disalignment: 6vmk at position 2308\n",
-      "Lcdr disalignment: 7v05 at position 2362\n",
       "Hcdr disalignment: 4r4n at position 2462\n",
-      "Hcdr disalignment: 6vmk at position 2480\n",
-      "Lcdr disalignment: 6vmk at position 2480\n",
-      "Hcdr disalignment: 6ot1 at position 2484\n",
-      "Lcdr disalignment: 6ot1 at position 2484\n",
       "Hcdr disalignment: 6t9e at position 2497\n",
       "Lcdr disalignment: 6t9e at position 2497\n",
       "Hcdr disalignment: 4r4n at position 2598\n",
       "Hcdr disalignment: 7lf7 at position 2603\n",
       "Hcdr disalignment: 3mug at position 2742\n",
       "Hcdr disalignment: 2qad at position 2769\n",
-      "Lcdr disalignment: 7ew5 at position 2828\n",
       "Hcdr disalignment: 3mug at position 2861\n",
       "Hcdr disalignment: 7lki at position 2921\n",
       "Lcdr disalignment: 7lki at position 2921\n",
       "Hcdr disalignment: 6ss4 at position 2946\n",
       "Hcdr disalignment: 6yax at position 2959\n",
       "Lcdr disalignment: 6yax at position 2959\n",
-      "Hcdr disalignment: 6vmk at position 3212\n",
-      "Lcdr disalignment: 6vmk at position 3212\n",
-      "Lcdr disalignment: 4tnw at position 3219\n",
       "Hcdr disalignment: 7d3m at position 3243\n",
       "Hcdr disalignment: 6yxm at position 3346\n",
       "Lcdr disalignment: 6yxm at position 3346\n",
-      "Lcdr disalignment: 4tnv at position 3351\n",
-      "Lcdr disalignment: 7v05 at position 3358\n",
       "Hcdr disalignment: 8dvd at position 3447\n",
-      "Lcdr disalignment: 4hg4 at position 3508\n",
       "Lcdr disalignment: 4r4f at position 3529\n",
-      "Lcdr disalignment: 4tnw at position 3533\n",
       "Hcdr disalignment: 6vtt at position 3586\n",
       "Hcdr disalignment: 6u0l at position 3657\n",
       "Hcdr disalignment: 6u0l at position 3679\n",
-      "Lcdr disalignment: 4tnv at position 3702\n",
       "Hcdr disalignment: 3csy at position 3724\n",
-      "Hcdr disalignment: 7pi3 at position 3757\n",
-      "Lcdr disalignment: 7pi3 at position 3757\n",
       "Hcdr disalignment: 3u4e at position 3968\n",
       "Hcdr disalignment: 3u2s at position 3978\n",
-      "Hcdr disalignment: 5y9f at position 3985\n",
-      "Lcdr disalignment: 5y9f at position 3985\n",
-      "Lcdr disalignment: 7cn2 at position 4050\n",
       "Hcdr disalignment: 7ssv at position 4096\n",
       "Hcdr disalignment: 7lki at position 4107\n",
       "Lcdr disalignment: 7lki at position 4107\n",
-      "Hcdr disalignment: 6vmk at position 4146\n",
-      "Lcdr disalignment: 6vmk at position 4146\n",
       "Hcdr disalignment: 7d3l at position 4171\n",
       "Hcdr disalignment: 4y5y at position 4315\n",
-      "Lcdr disalignment: 4tnv at position 4338\n",
-      "Lcdr disalignment: 7v05 at position 4350\n",
-      "Hcdr disalignment: 6ot1 at position 4543\n",
-      "Lcdr disalignment: 6ot1 at position 4543\n",
       "Hcdr disalignment: 8ekf at position 4559\n",
       "Lcdr disalignment: 8ekf at position 4559\n",
       "Hcdr disalignment: 6u0n at position 4588\n",
-      "Hcdr disalignment: 6ot1 at position 4612\n",
-      "Lcdr disalignment: 6ot1 at position 4612\n",
-      "Lcdr disalignment: 7v05 at position 4618\n",
       "Hcdr disalignment: 6xrt at position 4638\n",
       "Hcdr disalignment: 6ss6 at position 4674\n",
-      "Hcdr disalignment: 5y9f at position 4720\n",
-      "Lcdr disalignment: 5y9f at position 4720\n",
       "Hcdr disalignment: 4y5y at position 4817\n",
       "Hcdr disalignment: 6u0n at position 4833\n",
-      "Lcdr disalignment: 7cn2 at position 4864\n",
       "Hcdr disalignment: 7r8u at position 4961\n",
       "Lcdr disalignment: 7r8u at position 4961\n",
-      "Hcdr disalignment: 6vmk at position 4968\n",
-      "Lcdr disalignment: 6vmk at position 4968\n",
       "Hcdr disalignment: 6zjg at position 4969\n",
       "Lcdr disalignment: 6zjg at position 4969\n",
-      "Lcdr disalignment: 7v05 at position 5033\n",
-      "Lcdr disalignment: 6mph at position 5112\n",
       "Hcdr disalignment: 6ss2 at position 5122\n",
       "Hcdr disalignment: 6t9d at position 5144\n",
       "Lcdr disalignment: 6t9d at position 5144\n",
@@ -10947,8 +10894,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "ed8cbc74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = \"\"\"Hcdr disalignment: 3csy at position 229\n",
+    "Hcdr disalignment: 2znx at position 357\n",
+    "Lcdr disalignment: 2znx at position 357\n",
+    "Hcdr disalignment: 7t9b at position 484\n",
+    "Hcdr disalignment: 4r4n at position 598\n",
+    "Hcdr disalignment: 2znx at position 788\n",
+    "Lcdr disalignment: 2znx at position 788\n",
+    "Hcdr disalignment: 3u4e at position 962\n",
+    "Hcdr disalignment: 7t74 at position 1020\n",
+    "Hcdr disalignment: 6t9e at position 1069\n",
+    "Lcdr disalignment: 6t9e at position 1069\n",
+    "Hcdr disalignment: 7lf8 at position 1179\n",
+    "Hcdr disalignment: 3csy at position 1231\n",
+    "Hcdr disalignment: 6ss6 at position 1364\n",
+    "Hcdr disalignment: 4r4n at position 1448\n",
+    "Hcdr disalignment: 6u0n at position 1556\n",
+    "Hcdr disalignment: 4r4n at position 1560\n",
+    "Hcdr disalignment: 4dqo at position 1609\n",
+    "Hcdr disalignment: 7t9a at position 1630\n",
+    "Hcdr disalignment: 2qad at position 1660\n",
+    "Hcdr disalignment: 6yax at position 1692\n",
+    "Lcdr disalignment: 6yax at position 1692\n",
+    "Hcdr disalignment: 4r4n at position 1832\n",
+    "Hcdr disalignment: 6u0l at position 1867\n",
+    "Hcdr disalignment: 6ss6 at position 1948\n",
+    "Hcdr disalignment: 6w4m at position 1984\n",
+    "Hcdr disalignment: 6t9d at position 2097\n",
+    "Lcdr disalignment: 6t9d at position 2097\n",
+    "Hcdr disalignment: 7d3r at position 2175\n",
+    "Hcdr disalignment: 4r4n at position 2240\n",
+    "Hcdr disalignment: 5uwe at position 2270\n",
+    "Hcdr disalignment: 4r4n at position 2462\n",
+    "Hcdr disalignment: 6t9e at position 2497\n",
+    "Lcdr disalignment: 6t9e at position 2497\n",
+    "Hcdr disalignment: 4r4n at position 2598\n",
+    "Hcdr disalignment: 7lf7 at position 2603\n",
+    "Hcdr disalignment: 3mug at position 2742\n",
+    "Hcdr disalignment: 2qad at position 2769\n",
+    "Hcdr disalignment: 3mug at position 2861\n",
+    "Hcdr disalignment: 7lki at position 2921\n",
+    "Lcdr disalignment: 7lki at position 2921\n",
+    "Hcdr disalignment: 6ss4 at position 2946\n",
+    "Hcdr disalignment: 6yax at position 2959\n",
+    "Lcdr disalignment: 6yax at position 2959\n",
+    "Hcdr disalignment: 7d3m at position 3243\n",
+    "Hcdr disalignment: 6yxm at position 3346\n",
+    "Lcdr disalignment: 6yxm at position 3346\n",
+    "Hcdr disalignment: 8dvd at position 3447\n",
+    "Lcdr disalignment: 4r4f at position 3529\n",
+    "Hcdr disalignment: 6vtt at position 3586\n",
+    "Hcdr disalignment: 6u0l at position 3657\n",
+    "Hcdr disalignment: 6u0l at position 3679\n",
+    "Hcdr disalignment: 3csy at position 3724\n",
+    "Hcdr disalignment: 3u4e at position 3968\n",
+    "Hcdr disalignment: 3u2s at position 3978\n",
+    "Hcdr disalignment: 7ssv at position 4096\n",
+    "Hcdr disalignment: 7lki at position 4107\n",
+    "Lcdr disalignment: 7lki at position 4107\n",
+    "Hcdr disalignment: 7d3l at position 4171\n",
+    "Hcdr disalignment: 4y5y at position 4315\n",
+    "Hcdr disalignment: 8ekf at position 4559\n",
+    "Lcdr disalignment: 8ekf at position 4559\n",
+    "Hcdr disalignment: 6u0n at position 4588\n",
+    "Hcdr disalignment: 6xrt at position 4638\n",
+    "Hcdr disalignment: 6ss6 at position 4674\n",
+    "Hcdr disalignment: 4y5y at position 4817\n",
+    "Hcdr disalignment: 6u0n at position 4833\n",
+    "Hcdr disalignment: 7r8u at position 4961\n",
+    "Lcdr disalignment: 7r8u at position 4961\n",
+    "Hcdr disalignment: 6zjg at position 4969\n",
+    "Lcdr disalignment: 6zjg at position 4969\n",
+    "Hcdr disalignment: 6ss2 at position 5122\n",
+    "Hcdr disalignment: 6t9d at position 5144\n",
+    "Lcdr disalignment: 6t9d at position 5144\n",
+    "Hcdr disalignment: 7ly9 at position 5204\n",
+    "Hcdr disalignment: 3csy at position 5267\n",
+    "Hcdr disalignment: 4r4n at position 5316\n",
+    "Hcdr disalignment: 3u2s at position 5341\"\"\".split(\"\\n\")\n",
+    "\n",
+    "len(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "aa194ee6",
+   "id": "126bdd1d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -10956,7 +11003,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f33038a",
+   "id": "bcf8697f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -10964,7 +11011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b033cd2",
+   "id": "6d7b9ff2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -10979,7 +11026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "id": "94e5c5de",
    "metadata": {},
    "outputs": [
@@ -10988,7 +11035,7 @@
      "output_type": "stream",
      "text": [
       "Lseq \n",
-      "QVQLVESGGGVVQPGRSLRLSCAASGFTFSNFGMHWIRQSPGKGLEWVAIIWYDGSNTYYADSVKGRFTISRDNSKNTLYLQMNSLRAEDTAVYYCAKVWFGESEDNYSVDVWGQGTTVTVSSASTKGPSVFPLAPSSKSTSGGTAALGCLVKDYFPEPVTVSWNSGALTSGVHTFPAVLQSSGLYSLSSVVTVPSSSLGTQTYICNVNHKPSNTKVDKKVEPKSC\n",
+      "DIQMTQSPSTLSTSVGDRVTITCRASQSISNWLAWYQQKPGKAPKLLIYKASTLESGVPSRFSGSGSGTEFTLTISSLQPDDFATYYCQQYSSYWTFGQGTKLEIKRTVAAPSVFIFPPSDEQLKSGTASVVCLLNNFYPREAKVQWKVDNALQSGNSQESVTEQDSKDSTYSLSSTLTLSKADYEKHKVYACEVTHQGLSSPVTKSFNRGEC\n",
       "\n",
       "L1, L2, L3\n",
       "QSISNW KAS QQYSSYWT\n"
@@ -10997,10 +11044,10 @@
     {
      "data": {
       "text/plain": [
-       "'3333333000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000'"
+       "'000000000000000000000000001111110000000000000000022200000000000000000000000000000000000033333333000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11055,17 +11102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "ebc71b05",
+   "execution_count": 35,
+   "id": "1f0f9bcc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('M', 'M')"
+       "('M', 'm')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
