alias of amino acids

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "944cb70e",
    "metadata": {},
    "outputs": [],
@@ -17,10 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "8f90688c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random seed set as 42\n",
+      "Random seed set as 42\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pickle\n",
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "1eeadbcb",
    "metadata": {},
    "outputs": [],
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "0187b3bc",
    "metadata": {
     "scrolled": true
@@ -86,7 +95,7 @@
        "(torch.Size([32, 1]), torch.Size([32, 3]))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5322,7 +5331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "367c21f1",
    "metadata": {},
    "outputs": [
@@ -5332,7 +5341,7 @@
        "5374"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5344,7 +5353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "fc5f366a",
    "metadata": {},
    "outputs": [
@@ -5354,7 +5363,7 @@
        "dict_keys(['pdb', 'Hchain', 'Lchain', 'Achain', 'Hseq', 'Lseq', 'Aseq', 'L1', 'L2', 'L3', 'H1', 'H2', 'H3', 'Hpos', 'Lpos', 'Apos'])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5365,7 +5374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "6279c461",
    "metadata": {},
    "outputs": [
@@ -7210,13 +7219,7 @@
       "2exw has occurred 2 times\n",
       "7ki6 has occurred 3 times\n",
       "4ubd has occurred 6 times\n",
-      "6vbo has occurred 1 times\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "6vbo has occurred 1 times\n",
       "6ad8 has occurred 2 times\n",
       "3dsf has occurred 1 times\n",
       "5usi has occurred 2 times\n",
@@ -7380,7 +7383,13 @@
       "6iw2 has occurred 6 times\n",
       "6bzv has occurred 4 times\n",
       "6bpe has occurred 3 times\n",
-      "6feq has occurred 2 times\n",
+      "6feq has occurred 2 times\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "3mod has occurred 1 times\n",
       "3thm has occurred 1 times\n",
       "6u02 has occurred 4 times\n",
@@ -9051,13 +9060,7 @@
       "4rrp has occurred 6 times\n",
       "1tzh has occurred 2 times\n",
       "7rsn has occurred 3 times\n",
-      "5j13 has occurred 1 times\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "5j13 has occurred 1 times\n",
       "5kov has occurred 8 times\n",
       "5n7w has occurred 2 times\n",
       "5a2j has occurred 1 times\n",
@@ -9341,7 +9344,13 @@
       "6lyn has occurred 2 times\n",
       "4kjw has occurred 2 times\n",
       "5w1m has occurred 4 times\n",
-      "7seg has occurred 2 times\n",
+      "7seg has occurred 2 times\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "7xbd has occurred 1 times\n",
       "5mv4 has occurred 8 times\n",
       "3b2u has occurred 8 times\n",
@@ -10674,13 +10683,7 @@
       "7rm3 has occurred 2 times\n",
       "5myx has occurred 2 times\n",
       "5d71 has occurred 1 times\n",
-      "4xvs has occurred 1 times\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "4xvs has occurred 1 times\n",
       "6wfz has occurred 2 times\n",
       "1svz has occurred 2 times\n",
       "6mek has occurred 4 times\n",
@@ -10773,7 +10776,7 @@
        "1660"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10797,7 +10800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "e0e88f7e",
    "metadata": {
     "scrolled": true
@@ -10894,106 +10897,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "ed8cbc74",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "78"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l = \"\"\"Hcdr disalignment: 3csy at position 229\n",
-    "Hcdr disalignment: 2znx at position 357\n",
-    "Lcdr disalignment: 2znx at position 357\n",
-    "Hcdr disalignment: 7t9b at position 484\n",
-    "Hcdr disalignment: 4r4n at position 598\n",
-    "Hcdr disalignment: 2znx at position 788\n",
-    "Lcdr disalignment: 2znx at position 788\n",
-    "Hcdr disalignment: 3u4e at position 962\n",
-    "Hcdr disalignment: 7t74 at position 1020\n",
-    "Hcdr disalignment: 6t9e at position 1069\n",
-    "Lcdr disalignment: 6t9e at position 1069\n",
-    "Hcdr disalignment: 7lf8 at position 1179\n",
-    "Hcdr disalignment: 3csy at position 1231\n",
-    "Hcdr disalignment: 6ss6 at position 1364\n",
-    "Hcdr disalignment: 4r4n at position 1448\n",
-    "Hcdr disalignment: 6u0n at position 1556\n",
-    "Hcdr disalignment: 4r4n at position 1560\n",
-    "Hcdr disalignment: 4dqo at position 1609\n",
-    "Hcdr disalignment: 7t9a at position 1630\n",
-    "Hcdr disalignment: 2qad at position 1660\n",
-    "Hcdr disalignment: 6yax at position 1692\n",
-    "Lcdr disalignment: 6yax at position 1692\n",
-    "Hcdr disalignment: 4r4n at position 1832\n",
-    "Hcdr disalignment: 6u0l at position 1867\n",
-    "Hcdr disalignment: 6ss6 at position 1948\n",
-    "Hcdr disalignment: 6w4m at position 1984\n",
-    "Hcdr disalignment: 6t9d at position 2097\n",
-    "Lcdr disalignment: 6t9d at position 2097\n",
-    "Hcdr disalignment: 7d3r at position 2175\n",
-    "Hcdr disalignment: 4r4n at position 2240\n",
-    "Hcdr disalignment: 5uwe at position 2270\n",
-    "Hcdr disalignment: 4r4n at position 2462\n",
-    "Hcdr disalignment: 6t9e at position 2497\n",
-    "Lcdr disalignment: 6t9e at position 2497\n",
-    "Hcdr disalignment: 4r4n at position 2598\n",
-    "Hcdr disalignment: 7lf7 at position 2603\n",
-    "Hcdr disalignment: 3mug at position 2742\n",
-    "Hcdr disalignment: 2qad at position 2769\n",
-    "Hcdr disalignment: 3mug at position 2861\n",
-    "Hcdr disalignment: 7lki at position 2921\n",
-    "Lcdr disalignment: 7lki at position 2921\n",
-    "Hcdr disalignment: 6ss4 at position 2946\n",
-    "Hcdr disalignment: 6yax at position 2959\n",
-    "Lcdr disalignment: 6yax at position 2959\n",
-    "Hcdr disalignment: 7d3m at position 3243\n",
-    "Hcdr disalignment: 6yxm at position 3346\n",
-    "Lcdr disalignment: 6yxm at position 3346\n",
-    "Hcdr disalignment: 8dvd at position 3447\n",
-    "Lcdr disalignment: 4r4f at position 3529\n",
-    "Hcdr disalignment: 6vtt at position 3586\n",
-    "Hcdr disalignment: 6u0l at position 3657\n",
-    "Hcdr disalignment: 6u0l at position 3679\n",
-    "Hcdr disalignment: 3csy at position 3724\n",
-    "Hcdr disalignment: 3u4e at position 3968\n",
-    "Hcdr disalignment: 3u2s at position 3978\n",
-    "Hcdr disalignment: 7ssv at position 4096\n",
-    "Hcdr disalignment: 7lki at position 4107\n",
-    "Lcdr disalignment: 7lki at position 4107\n",
-    "Hcdr disalignment: 7d3l at position 4171\n",
-    "Hcdr disalignment: 4y5y at position 4315\n",
-    "Hcdr disalignment: 8ekf at position 4559\n",
-    "Lcdr disalignment: 8ekf at position 4559\n",
-    "Hcdr disalignment: 6u0n at position 4588\n",
-    "Hcdr disalignment: 6xrt at position 4638\n",
-    "Hcdr disalignment: 6ss6 at position 4674\n",
-    "Hcdr disalignment: 4y5y at position 4817\n",
-    "Hcdr disalignment: 6u0n at position 4833\n",
-    "Hcdr disalignment: 7r8u at position 4961\n",
-    "Lcdr disalignment: 7r8u at position 4961\n",
-    "Hcdr disalignment: 6zjg at position 4969\n",
-    "Lcdr disalignment: 6zjg at position 4969\n",
-    "Hcdr disalignment: 6ss2 at position 5122\n",
-    "Hcdr disalignment: 6t9d at position 5144\n",
-    "Lcdr disalignment: 6t9d at position 5144\n",
-    "Hcdr disalignment: 7ly9 at position 5204\n",
-    "Hcdr disalignment: 3csy at position 5267\n",
-    "Hcdr disalignment: 4r4n at position 5316\n",
-    "Hcdr disalignment: 3u2s at position 5341\"\"\".split(\"\\n\")\n",
-    "\n",
-    "len(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "126bdd1d",
    "metadata": {},
@@ -11017,16 +10920,18 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "07b0ca7a",
+   "cell_type": "markdown",
+   "id": "a69e6b60",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- 7t9b: why fault?\n",
+    "- 6t9e: wrong chain names in PDB file\n",
+    "- 6ss6: Hseq相比CDR多了个A"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "id": "94e5c5de",
    "metadata": {},
    "outputs": [
@@ -11034,20 +10939,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lseq \n",
-      "DIQMTQSPSTLSTSVGDRVTITCRASQSISNWLAWYQQKPGKAPKLLIYKASTLESGVPSRFSGSGSGTEFTLTISSLQPDDFATYYCQQYSSYWTFGQGTKLEIKRTVAAPSVFIFPPSDEQLKSGTASVVCLLNNFYPREAKVQWKVDNALQSGNSQESVTEQDSKDSTYSLSSTLTLSKADYEKHKVYACEVTHQGLSSPVTKSFNRGEC\n",
+      "Hseq \n",
+      "EVQLVQSGAEVNKPGSSVKVSCQASGATLNSHAFSWVRQAPGQGLEWMAGIIPIFGSSHYAQKFRGRVTISADESTRTVYLHLRGLRSDDTAVYYCASNSIAGVAAAGD*AD*DGGYYYDMDVWGQGTTVTVSSASTKGPSVFPLAPSSKSTSGGTAALGCLVKDYFPEPVTVSWNSGALTSGVHTFPAVLQSSGLYSLSSVVTVPSSSLGTQTYICNVNHKPSNTKVDKRVEPK\n",
       "\n",
-      "L1, L2, L3\n",
-      "QSISNW KAS QQYSSYWT\n"
+      "H1, H2, H3\n",
+      "GATLNSHA IIPIFGSS ASNSIAGVAAAGDYADYDGGYYYDMDV\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'000000000000000000000000001111110000000000000000022200000000000000000000000000000000000033333333000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000'"
+       "'3333333333333333333333333311111110000000000000000022222222000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11076,7 +10981,7 @@
     "    return mask, span\n",
     "\n",
     "for i in range(len(dict_data)):\n",
-    "    if dict_data[i][\"pdb\"]==\"7v05\":\n",
+    "    if dict_data[i][\"pdb\"]==\"6u0n\":\n",
     "        break\n",
     "\n",
     "Hseq = dict_data[i][\"Hseq\"][0]\n",
@@ -11090,98 +10995,130 @@
     "L3 = dict_data[i][\"L3\"]\n",
     "\n",
     "lm, ls = get_mask(seq=Lseq, substrs=[L1, L2, L3])\n",
+    "hm, hs = get_mask(seq=Hseq, substrs=[H1, H2, H3])\n",
     "\n",
-    "print(\"Lseq \")\n",
-    "print(Lseq)\n",
+    "# print(\"Lseq \")\n",
+    "# print(Lseq)\n",
+    "# print()\n",
+    "# print(\"L1, L2, L3\")\n",
+    "# print(L1, L2, L3)\n",
+    "\n",
+    "# \"\".join(list(map(str, lm)))\n",
+    "\n",
+    "print(\"Hseq \")\n",
+    "print(Hseq)\n",
     "print()\n",
-    "print(\"L1, L2, L3\")\n",
-    "print(L1, L2, L3)\n",
+    "print(\"H1, H2, H3\")\n",
+    "print(H1, H2, H3)\n",
     "\n",
-    "\"\".join(list(map(str, lm)))"
+    "\"\".join(list(map(str, hm)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
+   "id": "be7d1672",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALA\n",
+      "THR\n",
+      "GLY\n",
+      "TYR\n",
+      "SER\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in \"ATGYS\":\n",
+    "    print(to_abbr(i), sep=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "aaba9077",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, 34, 34)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.count_nonzero(hm) != len(H1)+len(H2)+len(H3), np.count_nonzero(hm), len(H1)+len(H2)+len(H3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dd33dc56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, 34, 34)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.count_nonzero(hm) != len(h1)+len(h2)+len(h3), np.count_nonzero(hm), len(h1)+len(h2)+len(h3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e43f602a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, 33, 34)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.count_nonzero(hm) != len(H1)+len(H2)+len(H3), np.count_nonzero(hm), len(H1)+len(H2)+len(H3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "1f0f9bcc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('M', 'm')"
+       "('E', 'F')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dict_data[i][\"Hchain\"], dict_data[i][\"Lchain\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "id": "d6daaf3f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "51"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Lseq.find(L2, Lseq.find(L1)+len(L1), -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "54d59083",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(25, 34), (33, 36), (90, 100)]"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "0d084895",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('STDVGDYAY', 'YVS', 'SLRSPGPYPL')"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Lseq[25:34], Lseq[33:36], Lseq[90:100]"
    ]
   },
   {
