--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "944cb70e",
    "metadata": {},
    "outputs": [],
@@ -17,10 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "8f90688c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random seed set as 42\n",
+      "Random seed set as 42\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pickle\n",
@@ -5322,7 +5331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "367c21f1",
    "metadata": {},
    "outputs": [
@@ -5332,7 +5341,7 @@
        "5359"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5344,20 +5353,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "f0fc2d6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7yqz\n",
+      "7v23\n",
+      "8err\n",
+      "7xst\n",
+      "8err\n",
+      "7xst\n",
+      "7yqx\n",
+      "7r8b\n",
+      "7la4\n",
+      "7ws0\n",
+      "5y9c\n",
+      "2nyy\n",
+      "6pv8\n",
+      "3v4v\n",
+      "7t9b\n",
+      "7mn8\n",
+      "7wbh\n",
+      "7ru4\n",
+      "7xmx\n",
+      "6cxc\n",
+      "7yqz\n",
+      "7m7i\n",
+      "7ru8\n",
+      "7xmz\n",
+      "7ws0\n",
+      "7v24\n",
+      "7r89\n",
+      "7t74\n",
+      "7x29\n",
+      "7mep\n",
+      "7t3m\n",
+      "6pv8\n",
+      "6qex\n",
+      "2nz9\n",
+      "7yqy\n",
+      "7v23\n",
+      "6ujc\n",
+      "7yr1\n",
+      "6qee\n",
+      "7wbh\n",
+      "7lkh\n",
+      "7ws0\n",
+      "7swx\n",
+      "7a69\n",
+      "7dnh\n",
+      "7r8a\n",
+      "7xmz\n",
+      "6cxc\n",
+      "6uyn\n",
+      "6cxc\n",
+      "8err\n",
+      "6lht\n",
+      "6pv7\n",
+      "7t3m\n",
+      "7v5k\n",
+      "7v5k\n",
+      "3v4v\n",
+      "7xst\n",
+      "2nz9\n",
+      "7x08\n",
+      "7e9o\n",
+      "7ru5\n",
+      "7k66\n",
+      "7niw\n",
+      "7s6d\n",
+      "3g6j\n",
+      "3g6j\n",
+      "7u9o\n",
+      "7a6f\n",
+      "7fjn\n",
+      "7ru3\n",
+      "7e9o\n",
+      "7v23\n",
+      "6ujb\n",
+      "7sj0\n",
+      "7s6c\n",
+      "7e9q\n",
+      "7u9p\n",
+      "7v5k\n",
+      "7niv\n",
+      "7z12\n",
+      "7x08\n",
+      "7jr7\n",
+      "7yr1\n",
+      "7s6c\n",
+      "6apb\n",
+      "7e9q\n",
+      "8dvd\n",
+      "7xmx\n",
+      "7upl\n",
+      "7nd3\n",
+      "7yqy\n",
+      "6vtt\n",
+      "7xst\n",
+      "7m7e\n",
+      "7ru5\n",
+      "7a6c\n",
+      "7fjn\n",
+      "8erq\n",
+      "3v4p\n",
+      "6pv7\n",
+      "7a65\n",
+      "6fn1\n",
+      "7x2a\n",
+      "7xst\n",
+      "7r87\n",
+      "7ssv\n",
+      "7yr1\n",
+      "3v4p\n",
+      "7t3m\n",
+      "7m7f\n",
+      "7x08\n",
+      "7m7f\n",
+      "6xrt\n",
+      "7m7i\n",
+      "6dcq\n",
+      "7e9q\n",
+      "7xmx\n",
+      "7yqy\n",
+      "7lkf\n",
+      "7mep\n",
+      "7ru3\n",
+      "7s6d\n",
+      "7xst\n",
+      "7e9o\n",
+      "7r88\n",
+      "7yqx\n",
+      "7upl\n",
+      "7niv\n",
+      "7wbh\n",
+      "7six\n",
+      "7x29\n",
+      "6v4p\n",
+      "7xmz\n",
+      "7a6e\n",
+      "7o9w\n"
+     ]
+    }
+   ],
    "source": [
     "len_Aseq = []\n",
     "\n",
     "for i in range(len(dict_data)):\n",
-    "    len_Aseq.append(len(\"/\".join(dict_data[i][\"Aseq\"])))"
+    "    len_Aseq.append(len(\"/\".join(dict_data[i][\"Aseq\"])))\n",
+    "    if len_Aseq[-1]>1000:\n",
+    "        print(dict_data[i][\"pdb\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "48bec035",
    "metadata": {},
    "outputs": [
@@ -5372,7 +5526,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5393,7 +5547,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
+   "id": "ed0293b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cefgl'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def seq_clip(seq, target_length=800):\n",
+    "    \n",
+    "    if len(seq) <= target_length:\n",
+    "        subseq = seq + \"#\" * (target_length - len(seq))\n",
+    "        return subseq\n",
+    "    else:\n",
+    "        seq = [(i, seq[i]) for i in range(len(seq))]\n",
+    "        subseq = random.sample(seq, target_length)\n",
+    "        subseq = sorted(subseq, key=lambda x:x[0])\n",
+    "        subseq = \"\".join([subseq[i][1] for i in range(len(subseq))])\n",
+    "        # subseq = \"\"\n",
+    "        # for i in range(len(seq)):\n",
+    "        #     if random.random() <= target_length/len(seq):\n",
+    "        #         subseq += seq[i]\n",
+    "        return subseq\n",
+    "    \n",
+    "    \n",
+    "a = \"abcdefghijkl\"\n",
+    "\n",
+    "seq_clip(a, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2ec4d66",
+   "metadata": {},
+   "source": [
+    "sequence/structure alignment to select antigen\n",
+    "- biopython\n",
+    "    - pairwise aligner\n",
+    "\n",
+    "epitope detection for binding site\n",
+    "\n",
+    "\n",
+    "distance for pre-processing multiple antigen chains\n",
+    "- biopython\n",
+    "    - distance selecter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e724cb47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "defgh, cdefg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "3269f1e3",
    "metadata": {},
    "outputs": [
@@ -5401,12 +5622,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "longer than 1500: 19\n"
+      "longer than 1000: 136\n"
      ]
     }
    ],
    "source": [
-    "threshold = 1500\n",
+    "threshold = 1000\n",
     "\n",
     "t = 0\n",
     "for i in range(len(len_Aseq)):\n",
