--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "944cb70e",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8f90688c",
    "metadata": {},
    "outputs": [
@@ -26,6 +26,7 @@
      "output_type": "stream",
      "text": [
       "Random seed set as 42\n",
+      "Side chain coordination file not found at ./data\\side_chain_coords.json\n",
       "Random seed set as 42\n"
      ]
     }
@@ -42,7 +43,39 @@
     "from tqdm import tqdm\n",
     "\n",
     "from utils import *\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append(\"./data/\")\n",
     "from dataset import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f29431cd",
+   "metadata": {},
+   "source": [
+    "# dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e71e1289",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "need_preprocess:  False\n",
+      "356\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch.utils.data import DataLoader\n",
+    "dataset = MyDataset(file_path=\"D:/NTU/MSAI_Project/SAbDab_mean/test.pkl\", need_preprocess=False)\n",
+    "print(len(dataset))"
    ]
   },
   {
