--- a/demo.ipynb
+++ b/demo.ipynb
@@ -79,6 +79,200 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "82b7f413",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_loader = DataLoader(dataset, batch_size=2, collate_fn=dataset.collate_fn)\n",
+    "for batch in test_loader:\n",
+    "#     print(batch)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "70eab25e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000]],\n",
+       "\n",
+       "         [[  10.9640,  -99.8570,  -34.4260],\n",
+       "          [  10.9750, -101.2780,  -34.7690],\n",
+       "          [  12.0960, -101.9410,  -34.0060],\n",
+       "          [  12.8360, -102.6870,  -34.6320]],\n",
+       "\n",
+       "         [[  12.2960, -101.6130,  -32.7000],\n",
+       "          [  13.4270, -102.1140,  -31.8940],\n",
+       "          [  13.4230, -103.6260,  -31.7060],\n",
+       "          [  12.4760, -104.1790,  -31.1550]],\n",
+       "\n",
+       "         ...,\n",
+       "\n",
+       "         [[  19.4390,  -87.4680,  -27.3050],\n",
+       "          [  18.9020,  -86.5260,  -26.3340],\n",
+       "          [  18.4200,  -87.3090,  -25.1440],\n",
+       "          [  17.5600,  -88.1880,  -25.2960]],\n",
+       "\n",
+       "         [[  22.4760,  -88.8410,  -28.8500],\n",
+       "          [  21.1220,  -88.9230,  -28.3240],\n",
+       "          [  20.7260,  -87.8340,  -27.3290],\n",
+       "          [  21.5670,  -87.3420,  -26.5880]],\n",
+       "\n",
+       "         [[  26.3030,  -89.0430,  -26.7520],\n",
+       "          [  26.5050,  -90.1070,  -27.7370],\n",
+       "          [  25.3910,  -90.1940,  -28.8030],\n",
+       "          [  24.7330,  -91.2290,  -28.9400]]],\n",
+       "\n",
+       "\n",
+       "        [[[   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000]],\n",
+       "\n",
+       "         [[   9.6630,  -11.1660,   49.1370],\n",
+       "          [   9.9640,   -9.9550,   48.3160],\n",
+       "          [  11.4630,   -9.9060,   48.0250],\n",
+       "          [  11.8870,  -10.3600,   46.9600]],\n",
+       "\n",
+       "         [[  12.2620,   -9.3850,   48.9500],\n",
+       "          [  13.7010,   -9.3860,   48.7500],\n",
+       "          [  14.4210,   -9.8690,   49.9960],\n",
+       "          [  14.4350,   -9.1790,   51.0200]],\n",
+       "\n",
+       "         ...,\n",
+       "\n",
+       "         [[   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000]],\n",
+       "\n",
+       "         [[   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000]],\n",
+       "\n",
+       "         [[   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000],\n",
+       "          [   0.0000,    0.0000,    0.0000]]]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch[\"X\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fb6fb641",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 3, 19,  8, 19,  9, 18, 17, 22,  6, 25,  6,  9,  8,  7, 25, 22, 19, 22,\n",
+       "          9, 22, 10, 23, 24, 23,  8, 22,  6, 11, 25,  9, 23,  7, 13,  6,  8, 16,\n",
+       "         12,  8, 21, 19, 25, 25,  6, 18,  6,  9, 17, 12,  9,  6, 20, 10, 12,  6,\n",
+       "         14,  6, 16, 23, 14, 13, 16, 22,  7,  9, 18, 22, 21,  9, 22, 10, 22, 18,\n",
+       "         14, 16, 22, 18, 22, 19,  8, 11,  9, 18, 20, 16, 22,  9, 19, 23, 14, 14,\n",
+       "         23,  7, 21, 13, 13, 24,  7, 21, 14, 25, 13,  6, 22, 18, 25, 20, 14, 13,\n",
+       "         12,  6, 19,  6, 23, 22,  8, 23,  8, 22, 22,  4, 14, 10,  8, 20, 22, 19,\n",
+       "         22, 25, 22, 22,  9,  8,  8, 22,  8,  6, 17, 18,  8, 23, 20, 22, 24, 18,\n",
+       "         22, 22, 19, 22,  9,  9, 13, 22, 22, 16, 19, 18, 16, 11,  9,  7, 12, 13,\n",
+       "         19, 19, 18, 25,  6, 19, 22, 25, 18,  9,  9, 10, 13, 12,  7, 22, 23, 21,\n",
+       "         17, 22,  6,  8, 25, 14, 21, 11, 23,  6, 22,  6, 22,  6, 23, 14, 11, 23,\n",
+       "          9, 23, 10, 22, 22,  8, 18,  7, 17, 14,  9,  7,  8, 13, 13, 24, 19, 19,\n",
+       "         13, 11, 21, 13, 21, 23, 11,  6,  6,  6, 23, 18,  9, 17, 10, 18, 21,  7,\n",
+       "          2, 22, 12, 19, 25, 19, 24,  9, 13, 11, 16, 21, 24, 16,  8,  6, 24, 10,\n",
+       "         15, 16, 16, 18, 24, 10, 21, 18, 14, 11, 23, 25, 15, 14, 14, 13, 13, 25,\n",
+       "         25, 24, 25, 24, 23, 17, 17, 22, 15,  8, 24, 21, 14],\n",
+       "        [ 3, 18,  9, 19, 19, 22,  6,  7, 17,  9,  8, 21, 22,  6,  7, 22,  8, 18,\n",
+       "          9, 22, 24, 23,  7, 22,  6, 11, 16, 10, 18, 14, 13, 13, 10, 19, 12,  8,\n",
+       "         18, 19, 21, 25, 17, 19,  6,  9, 17, 12, 10,  6, 12, 10, 14, 25, 17, 16,\n",
+       "          6, 16, 22, 17, 13,  7, 25, 21, 11, 19,  6, 18,  7, 23, 20, 23,  7, 14,\n",
+       "         23,  9, 22, 16, 23,  7, 13,  9, 19,  9, 22, 22,  9, 23, 22, 17, 14, 23,\n",
+       "          7,  8, 13, 13, 24, 16,  7, 14,  9, 15, 14, 13, 12,  6, 19,  6, 23, 23,\n",
+       "          9, 23,  8, 22, 22,  7,  4, 14,  8,  8, 20, 23, 19, 23, 25,  9, 22,  9,\n",
+       "         22,  8, 23, 10,  6, 19, 25,  7, 22, 10, 22, 24, 18, 22, 22, 19, 22,  9,\n",
+       "          9, 14, 22, 14,  6, 18, 23, 13,  9, 10, 12,  8, 11, 19, 21, 25,  6, 19,\n",
+       "         22, 25, 18, 21,  9, 10, 11,  9,  8, 22, 18, 21, 14, 22,  6,  8, 25, 14,\n",
+       "         21, 11, 23,  6, 22,  6, 22,  6, 23, 14, 11, 23,  9, 18, 10, 22, 21,  8,\n",
+       "         17,  7, 17, 14,  8,  6,  8, 13, 13, 24, 12, 19,  6, 23, 15, 11, 25, 15,\n",
+       "         23,  8,  6,  6,  6, 23, 18,  9, 17, 10,  7, 21,  7,  2, 15, 25, 18, 23,\n",
+       "         16, 20, 18,  7, 20,  7,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch[\"S\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "146f3ee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0000000000000000000000000011111111000000000000000002222222000000000000000000000000000000000000003333333333330000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000',\n",
+       " '000000000000000000000000111111110000000000000000022222222000000000000000000000000000000000000003333333000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch[\"L\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1973c800",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([2, 283, 4, 3]), torch.Size([2, 283]), 2, torch.Size([2, 283]))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch[\"X\"].shape, batch[\"S\"].shape, len(batch[\"L\"]), batch[\"mask\"].shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d72e06a0",
    "metadata": {},
